# llm_batch_pipeliner

./: .gitignore  .pylintrc  AGENTS.md  README.md  comparison.json  pyproject.toml
.github/workflows/: pylint.yml  ruff.yml  semgrep.yml  tests.yml
docs/: admin-guide.md  architecture.md  backend-comparison.md  bee-observability-compose.yml  bee-traefik-compose.yml  benchmark-run.md  developer-guide.md  getting-started.md  llm-batch-pipeline-backend-comparison-3way-dashboard.json  llm-batch-pipeline-backend-comparison-dashboard.json  llm-batch-pipeline-dashboard.json  llm-batch-pipeline-run-comparison-dashboard.json  llm-batch-pipeline-run-drilldown-dashboard.json  metrics_data_flow.mmd  otel-collector-bee.yaml  prometheus-bee.yml  running-llamacpp.md  running-ollama.md  running-vllm.md  testing-loop-details.md  testing-loop-plan.md  user-guide.md
docs/ideas/: use-case-ideas.txt
scripts/: compare_runs.py  make_spam_benchmark_subset.py
scripts/nanu/: README.md  gpu-idle-check.sh  llamacpp-down.sh  llamacpp-up.sh  ollama-shards-down.sh  ollama-shards-up.sh  ollama-tp-down.sh  ollama-tp-up.sh  vllm-shards-down.sh  vllm-shards-up.sh  vllm-tp-down.sh  vllm-tp-up.sh
src/llm_batch_pipeline/: __init__.py  __main__.py  cli.py  config.py  evaluation.py  export.py  filters.py  logging_utils.py  metrics.py  pipeline.py  render.py  schema_loader.py  stages.py  transforms.py  tui.py  validation.py
src/llm_batch_pipeline/backends/: base.py  common.py  http_server.py  llamacpp_backend.py  ollama_backend.py  openai_backend.py  vllm_backend.py
src/llm_batch_pipeline/examples/gdpr_detection/: plugin.py  prompt.txt  schema.py
src/llm_batch_pipeline/examples/spam_detection/: plugin.py  prompt.txt  schema.py
src/llm_batch_pipeline/plugins/: base.py  registry.py
src/llm_batch_pipeliner/: cli.py
tests/: conftest.py  test_cli.py  test_config.py  test_evaluation.py  test_export.py  test_filters.py  test_gdpr_plugin.py  test_llamacpp_backend.py  test_logging.py  test_metrics.py  test_ollama_backend.py  test_pipeline.py  test_plugins_base.py  test_registry.py  test_render.py  test_schema_loader.py  test_smoke.py  test_spam_plugin.py  test_stages.py  test_transforms.py  test_tui.py  test_validation.py  test_vllm_backend.py
tests/e2e/: test_cli_roundtrip.py
tests/fixtures/batch_roundtrip/: prompt.txt  schema.py
tests/fixtures/batch_roundtrip/evaluation/: ground-truth.csv
tests/fixtures/batch_roundtrip/input/: ham_001.eml  spam_001.eml
