[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "llm-batch-pipeline"
version = "0.1.0"
description = "Generic LLM batch processing pipeline with pluggable preprocessing, validation, evaluation, and export"
readme = "docs/user-guide.md"
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = ["llm", "batch", "pipeline", "openai", "ollama", "evaluation"]

dependencies = [
    "charset-normalizer>=3.4.0",
    "httpx>=0.27.0",
    "mail-parser-reply>=1.36",
    "openai>=2.0.0",
    "openpyxl>=3.1.5",
    "prometheus-client>=0.24.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "selectolax>=0.4.7",
]

[project.optional-dependencies]
email = [
    "lingua-language-detector>=2.2.0",
    "rapidfuzz>=3.14.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[project.scripts]
llm-batch-pipeline = "llm_batch_pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_batch_pipeline"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
